Update java tracer README.md